[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/wave_designer/sample_designer/sample_designer.gd" type="Script" id=1]
[ext_resource path="res://ui/widgets/spin_bar.gd" type="Script" id=3]

[node name="SampleDesigner" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Info" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="HBC" type="HBoxContainer" parent="Info"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 31.0
custom_constants/separation = 4

[node name="LabelName" type="Label" parent="Info/HBC" groups=["Label"]]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Name"

[node name="S2" type="ReferenceRect" parent="Info/HBC"]
margin_left = 42.0
margin_right = 50.0
margin_bottom = 24.0
rect_min_size = Vector2( 8, 0 )

[node name="Name" type="LineEdit" parent="Info/HBC"]
margin_left = 54.0
margin_right = 246.0
margin_bottom = 24.0
rect_min_size = Vector2( 192, 0 )

[node name="S" type="ReferenceRect" parent="Info/HBC"]
margin_left = 250.0
margin_right = 274.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 0 )

[node name="LabelSizeSamples" type="Label" parent="Info/HBC"]
margin_left = 278.0
margin_top = 5.0
margin_right = 344.0
margin_bottom = 19.0
text = "0 samples"

[node name="Designer" type="PanelContainer" parent="."]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SC" type="ScrollContainer" parent="Designer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 551.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBC" type="VBoxContainer" parent="Designer/SC"]
margin_right = 1010.0
margin_bottom = 120.0
size_flags_horizontal = 3

[node name="Load" type="Button" parent="Designer/SC/VBC"]
margin_right = 42.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "Load"

[node name="S" type="ReferenceRect" parent="Designer/SC/VBC"]
margin_top = 24.0
margin_right = 1010.0
margin_bottom = 48.0
rect_min_size = Vector2( 24, 24 )

[node name="GC" type="GridContainer" parent="Designer/SC/VBC"]
margin_top = 52.0
margin_right = 1010.0
margin_bottom = 120.0
size_flags_horizontal = 11
size_flags_vertical = 11
columns = 2

[node name="LabelRecFreq" type="Label" parent="Designer/SC/VBC/GC" groups=["Label"]]
margin_right = 124.0
margin_bottom = 14.0
text = "Recorder frequency"

[node name="RecFreq" type="ProgressBar" parent="Designer/SC/VBC/GC"]
margin_left = 128.0
margin_right = 1010.0
margin_bottom = 14.0
rect_min_size = Vector2( 60, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 192000.0
step = 1.0
value = 1.0
percent_visible = false
script = ExtResource( 3 )

[node name="LabelSamFreq" type="Label" parent="Designer/SC/VBC/GC" groups=["Label"]]
margin_top = 18.0
margin_right = 124.0
margin_bottom = 32.0
text = "Sample frequency"

[node name="SamFreq" type="ProgressBar" parent="Designer/SC/VBC/GC"]
margin_left = 128.0
margin_top = 18.0
margin_right = 1010.0
margin_bottom = 32.0
rect_min_size = Vector2( 60, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 192000.0
step = 1.0
value = 1.0
percent_visible = false
script = ExtResource( 3 )

[node name="LabelStart" type="Label" parent="Designer/SC/VBC/GC" groups=["Label"]]
margin_top = 36.0
margin_right = 124.0
margin_bottom = 50.0
text = "Loop start"

[node name="Start" type="ProgressBar" parent="Designer/SC/VBC/GC"]
margin_left = 128.0
margin_top = 36.0
margin_right = 1010.0
margin_bottom = 50.0
rect_min_size = Vector2( 60, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 192000.0
step = 1.0
value = 1.0
percent_visible = false
script = ExtResource( 3 )

[node name="LabelEnd" type="Label" parent="Designer/SC/VBC/GC" groups=["Label"]]
margin_top = 54.0
margin_right = 124.0
margin_bottom = 68.0
text = "Loop end"

[node name="End" type="ProgressBar" parent="Designer/SC/VBC/GC"]
margin_left = 128.0
margin_top = 54.0
margin_right = 1010.0
margin_bottom = 68.0
rect_min_size = Vector2( 60, 14 )
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 192000.0
step = 1.0
value = 1.0
percent_visible = false
script = ExtResource( 3 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.wav ; WAV file" )

[connection signal="text_changed" from="Info/HBC/Name" to="." method="_on_Name_changed"]
[connection signal="pressed" from="Designer/SC/VBC/Load" to="." method="_on_Load_pressed"]
[connection signal="value_changed" from="Designer/SC/VBC/GC/RecFreq" to="." method="_on_values_changed"]
[connection signal="value_changed" from="Designer/SC/VBC/GC/SamFreq" to="." method="_on_values_changed"]
[connection signal="value_changed" from="Designer/SC/VBC/GC/Start" to="." method="_on_values_changed"]
[connection signal="value_changed" from="Designer/SC/VBC/GC/End" to="." method="_on_values_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_selected"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
